--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-cookie-next": "^1.3.0",
     "vue-i18n": "^9.1.0",
-    "vue-router": "^4.0.0-0",
-    "vue3-cookies": "^1.0.6"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
